add enemy spawning

--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/utils.js"></script>
 
   <!-- create a canvas holder-->
   <div id="canvas-holder">
     <canvas id="canvas"></canvas>
   </div>
+  <!-- create paragraph how to play-->
+  <p id="how-to-play">Press space to stab. </p>
+
 
   <!-- link the game-->
   <script type="module" src="js/game.js"></script>
