add healthbar and damage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
   <!-- create a canvas holder-->
   <div id="canvas-holder">
+    <canvas id="canvasUI"></canvas>
     <canvas id="canvas"></canvas>
   </div>
   <!-- create paragraph how to play-->
