--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Pig Fighter</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Pig Fighter">
-  <meta property="og:type" content="">
+  <meta property="og:type" content="website">
   <meta property="og:url" content="maxwex.me">
   <meta property="og:image" content="img/Schweindal.png">
 
