--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="Pig Fighter">
-  <meta property="og:type" content="website">
+  <meta property="og:type" content="website" >
   <meta property="og:url" content="maxwex.me">
-  <meta property="og:image" content="img/Schweindal.png">
+  <meta property="og:image" content="/img/Schweindal.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
