--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Pig Fighter">
   <meta property="og:type" content="website" >
   <meta property="og:url" content="maxwex.me">
-  <meta property="og:image" content="/Grunz/img/Schweindal.png">
+  <meta property="og:image" content="/Grunz/img/TitleImage.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
