--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:type" content="website" >
   <meta property="og:url" content="maxwex.me">
   <meta property="og:image" content="/Grunz/img/TitleImage.png">
+  <meta property="og:description" content="Help the pig to fight for freedom!">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
